# pkvm-tester

./: .gitignore  Makefile  README.md  run-pldi26-artefact  run-vm
addr2lcov/: addr2lcov.opam  dune-project
addr2lcov/src/: addr2lcov.ml  dune  iters.ml  iters.mli  lcov.ml  lcov.mli
addr2lcov/src-json/: dune  json.ml  json.mli
ramfs/: init
ramfs.exe/: 00-hello  01-fiddle
scripts/: capture-coverage  fetch-sample-prebuilt  find-uefi  genhtmall  kcov-addresses  reconstruct_trace  run-vm  unfancy
